# transition-matrix-ecg

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: defaults.toml
data_lock/: data_lock_readme.md
features/: B1_fit_test.csv  B1_fit_test.parquet  B1_fit_test.xlsx  B1_fit_train.parquet  B1_fit_train.xlsx  B1_fit_val.csv  B1_fit_val.parquet  B1_fit_val.xlsx  B1_raw_test.csv  B1_raw_test.parquet  B1_raw_test.xlsx  B1_raw_train.parquet  B1_raw_train.xlsx  B1_raw_val.csv  B1_raw_val.parquet  B1_raw_val.xlsx  B2_dictionary.csv  B2_fit_test.csv  B2_fit_test.parquet  B2_fit_test.xlsx  B2_fit_train.csv  B2_fit_train.parquet  B2_fit_train.xlsx  B2_fit_val.csv  B2_fit_val.parquet  B2_fit_val.xlsx  B2_raw_test.csv  B2_raw_test.parquet  B2_raw_test.xlsx  B2_raw_train.csv  B2_raw_train.parquet  B2_raw_train.xlsx  B2_raw_val.csv  B2_raw_val.parquet  B2_raw_val.xlsx
reports/: b1_raw_train_null_report.md  b1_raw_train_null_report_uk.md  b_matrix_generation_report.md  b_matrix_generation_report_uk.md  bootstrap_ci_report.csv  medical_standards_report.md  metrics_report.md  ptbxl_training_metrics.json
src/tm_ecg/: __init__.py  cli.py  config.py  constants.py  ontology.py  real_data.py  types.py
src/tm_ecg/features/: formulas.py  registry.py
src/tm_ecg/io/: common.py  tabular.py
src/tm_ecg/modeling/: classifier.py  latents.py  triads.py
src/tm_ecg/reporting/: reports.py
src/tm_ecg/signal/: fiducials.py  filtering.py  pacing.py  rpeaks.py
src/tm_ecg/stages/: __init__.py  (+16 more)
tests/: test_formulas.py  test_ontology_and_triads.py  test_splits.py  test_transforms.py
